--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -19,7 +19,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        sdk: [stable, beta, dev, 2.10.3, 2.12.0-29.10.beta]
+        # dart is null-safe since 2.12
+        sdk: [stable, beta, dev, 2.12.0-29.10.beta]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
