--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        # dart is null-safe since 2.12
+        # dart is null-safe since 2.12 ...
         sdk: [stable, beta, dev, 2.12.0-29.10.beta]
     steps:
       - uses: actions/checkout@v2
