--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,9 +18,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest] #, macos-latest, windows-latest]
         # dart is null-safe since 2.12 ...
-        sdk: [stable, beta, dev, 2.12.0-29.10.beta]
+        sdk: [2.12.0-29.10.beta]
+        #sdk: [stable, beta, dev, 2.12.0-29.10.beta]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
