--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author:
 homepage: https://github.com/rtmigo/dart_disk_cache
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  #sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
 
