--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,3 +1,5 @@
+# https://github.com/dart-lang/setup-dart
+
 name: unittest
 
 on:
@@ -20,7 +22,7 @@ jobs:
       matrix:
         os: [ubuntu-latest] #, macos-latest, windows-latest]
         # dart is null-safe since 2.12 ...
-        sdk: [2.12.0-29.10.beta]
+        sdk: [2.12.0]
         #sdk: [stable, beta, dev, 2.12.0-29.10.beta]
     steps:
       - uses: actions/checkout@v2
