--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -6,12 +6,14 @@ on:
   push:
     branches: [master]
     paths-ignore:
+      - 'example/*'
       - '**.md'
       - '**.txt'
 
   pull_request:
     branches: [master]
     paths-ignore:
+      - 'example/*'
       - '**.md'
       - '**.txt'
 
