--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -4,14 +4,14 @@ name: unittest
 
 on:
   push:
-    branches: [master]
+    branches: [master, dev]
     paths-ignore:
       - 'example/*'
       - '**.md'
       - '**.txt'
 
   pull_request:
-    branches: [master]
+    branches: [master, dev]
     paths-ignore:
       - 'example/*'
       - '**.md'
@@ -23,10 +23,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest] # [ubuntu-latest, macos-latest, windows-latest]
-        # dart is null-safe since 2.12 ...
+        os: [macos-latest, ubuntu-latest, windows-latest]
         sdk: [2.12.0]
-        #sdk: [stable, beta, dev, 2.12.0-29.10.beta]
     steps:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
