--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 
 dependencies:
   file_errors: ^1.0.3
-  # :)
+  #  path: ../file_errors
+  #file_errors:
+  #  path: ../file_errors
 
 dev_dependencies:
   xrandom: any
