--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -4,14 +4,14 @@ name: unittest
 
 on:
   push:
-    branches: [master, dev]
+    branches: [dev]
     paths-ignore:
       - 'example/*'
       - '**.md'
       - '**.txt'
 
   pull_request:
-    branches: [master, dev]
+    branches: [dev]
     paths-ignore:
       - 'example/*'
       - '**.md'
@@ -30,9 +30,19 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: ${{ matrix.sdk }}
-
       - name: Install dependencies
         run: dart pub get
-
       - name: Run tests
         run: dart test
+
+  tomaster:
+    runs-on: ubuntu-latest
+    needs: [test]
+
+    steps:
+      - uses: actions/checkout@v2
+#        with:
+#          token: ${{secrets.PAT}}
+      - run: |
+          # do something
+          git push -u origin master
