--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,26 +18,26 @@ on:
       - '**.txt'
 
 jobs:
-  test:
-    timeout-minutes: 5
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        sdk: [2.12.0]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v1
-        with:
-          sdk: ${{ matrix.sdk }}
-      - name: Install dependencies
-        run: dart pub get
-      - name: Run tests
-        run: dart test
+#  test:
+#    timeout-minutes: 5
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [macos-latest, ubuntu-latest, windows-latest]
+#        sdk: [2.12.0]
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: dart-lang/setup-dart@v1
+#        with:
+#          sdk: ${{ matrix.sdk }}
+#      - name: Install dependencies
+#        run: dart pub get
+#      - name: Run tests
+#        un: dart test
 
   tomaster:
     runs-on: ubuntu-latest
-    needs: [test]
+    #needs: [test]
 
     steps:
       - uses: actions/checkout@v2
@@ -45,4 +45,7 @@ jobs:
 #          token: ${{secrets.PAT}}
       - run: |
           # do something
+          git config --global user.name 'ArtIG'
+          git config --global user.email 'rtmigo@users.noreply.github.com'
+          git commit -am "Automated"
           git push -u origin master
