--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -47,5 +47,6 @@ jobs:
           # do something
           git config --global user.name 'ArtIG'
           git config --global user.email 'rtmigo@users.noreply.github.com'
+          git add .
           git commit -am "Automated"
           git push -u origin master
