--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -38,15 +38,22 @@ jobs:
   tomaster:
     runs-on: ubuntu-latest
     #needs: [test]
-
     steps:
-      - uses: actions/checkout@v2
-#        with:
-#          token: ${{secrets.PAT}}
-      - run: |
-          # do something
-          git config --global user.name 'ArtIG'
-          git config --global user.email 'rtmigo@users.noreply.github.com'
-          git checkout master
-          git merge dev
-#          #git push -u origin master
+      uses: devmasx/merge-branch@v1.3.1
+      with:
+        type: now
+        from_branch: dev
+        target_branch: master
+        github_token: ${{ github.token }}
+
+#    steps:
+#      - uses: actions/checkout@v2
+##        with:
+##          token: ${{secrets.PAT}}
+#      - run: |
+#          # do something
+#          git config --global user.name 'ArtIG'
+#          git config --global user.email 'rtmigo@users.noreply.github.com'
+#          git checkout master
+#          git merge dev
+##          #git push -u origin master
