--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: dart-lang/setup-dart@v1
       - name: Analyze
-        run: flutter analyze
+        run: dart analyze
 
   merge-to-staging:
-    needs: test
+    needs: [test, analyze]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
