--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: 2.12.0
+      - name: Install dependencies
+        run: dart pub get
       - name: Analyze
         run: dart analyze
 
