--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: dart pub get
       - name: Analyze
-        run: dart analyze
+        run: dart analyze --fatal-infos
 
   merge-to-staging:
     needs: [test, analyze]
