--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   file_errors: ^1.0.3
+  path: ^1.8.0
   #collection: ^1.15.0
   #  path: ../file_errors
   #file_errors:
