preparing for release

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fmap
 description: A `Map` implementation that stores its elements in files. Can be used as a cache or persistent key-value storage.
-version: 0.1.0+1
+version: 0.1.0
 author:
 homepage: https://github.com/rtmigo/fmap
 
@@ -10,8 +10,10 @@ environment:
 dependencies:
   file_errors: ^1.0.3
   path: ^1.8.0
+  crypto: ^3.0.0
 
 dev_dependencies:
+  errno: ^1.4.1
   xrandom: any
   test: ^1.5.1
 
