--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,10 @@ jobs:
         run: dart pub get
       - name: Analyze
         run: dart analyze --fatal-infos
+      - name: Pub dry run
+        run: dart pub publish --dry-run
+
+
 
   merge-to-staging:
     needs: [test, analyze]
