--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,8 @@ jobs:
         run: dart pub get
       - name: Analyze
         run: dart analyze --fatal-infos
-      - name: Pub dry run
+      - name: Publish (dry run)
         run: dart pub publish --dry-run
-
-
 
   merge-to-staging:
     needs: [test, analyze]
