--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fmap
 description: A `Map` implementation that stores its elements in files. Can be used as a cache or persistent key-value storage.
-version: 0.1.0
+version: 0.1.1
 repository: https://github.com/rtmigo/fmap
 
 environment:
@@ -16,5 +16,6 @@ dev_dependencies:
   errno: ^1.4.1
   xrandom: any
   test: ^1.5.1
+  pedantic: ^1.9.0
 
 
