--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fmap
-description: File-based key-value collection implementead as a Map. Good for caching and blob storage.
-version: 0.1.1+3
+description: File-based key-value collection. Good for caching and blob storage.
+version: 0.1.1+4
 repository: https://github.com/rtmigo/fmap
 
 environment:
